Prototipação da listagem de status.

--- a/src/main/resources/templates/layout/fragment/menu-lateral.html
+++ b/src/main/resources/templates/layout/fragment/menu-lateral.html
@@ -6,14 +6,14 @@
 <div class="sidebar sidebar-dark bg-dark" th:fragment="sidebar">
     <ul class="list-unstyled">
         <li><a href="#"><i class="fas fa-home fa-fw"></i> Dashboard</a></li>
-        <li><a href="#"><i class="fas fa-book fa-fw"></i> Datas</a></li>
+        <li><a th:href="@{/data/nova}"><i class="fas fa-book fa-fw"></i> Datas</a></li>
         <li>
             <a href="#sm_expand_config" data-toggle="collapse">
                 <i class="fas fa-cog fa-fw"></i> Configurações
             </a>
             <ul id="sm_expand_config" class="list-unstyled collapse">
-		        <li><a href="#" target="_blank">Status dos usuários</a></li>
-		        <li><a href="#" target="_blank">Usuários</a></li>
+		        <li><a th:href="@{/status}">Status dos usuários</a></li>
+		        <li><a href="#">Usuários</a></li>
             </ul>
         </li>
         <li>
