--- a/src/main/resources/templates/data/manter.html
+++ b/src/main/resources/templates/data/manter.html
@@ -9,43 +9,49 @@
         <div class="card-header bg-white font-weight-bold">
             Cadastro de data
         </div>
-        <div class="card-body">
-            <form>
+        <form method="POST" th:object="${dataComemorativa}" th:action="@{/datas/nova}">
+	        	
+        	<div th:replace="layout/fragment/mensagens :: messages"></div>
+				
+	        <div class="card-body">
+				
+        		<input type="hidden" th:field="*{id}" />
+        
                 <div class="form-row col-sm-3 mb-3">
  	               <label for="data">Data</label>
-                   <input type="text" class="form-control " id="data" placeholder="dd/mm/aaaa">
+                   <input type="date" class="form-control" id="data" th:field="*{data}">
                 </div>
                 
                 <div class="form-row col-sm-12 mb-3">
                     <label for="descricao">Descrição</label>
-                    <textarea class="form-control" id="descricao" rows="6"></textarea>
+                    <textarea class="form-control" id="descricao" rows="6" th:field="*{descricao}"></textarea>
                 </div>
                 
                 <div class="form-group col-sm-3 mb-0">
                     <label for="descricao">Status</label>
                     <div class="form-row">
 	                    <div class="form-check form-check-inline">
-	                        <input class="form-check-input" type="radio" name="status" id="statusAtivo" value="true" checked>
+	                        <input class="form-check-input" type="radio" id="statusAtivo" checked>
 	                        <label class="form-check-label" for="statusAtivo">
 	                            Ativo
 	                        </label>
 	                    </div>
 	                    
 	                    <div class="form-check form-check-inline">
-	                        <input class="form-check-input" type="radio" name="status" id="statusInativo" value="false">
+	                        <input class="form-check-input" type="radio" id="statusInativo">
 	                        <label class="form-check-label" for="statusInativo">
 	                            Inativo
 	                        </label>
 	                    </div>
                     </div>
                 </div>
-            </form>
-        </div>
-        
-        <div class="card-footer bg-white">
-            <button class="btn btn-primary" type="submit">Salvar</button>
-            <button class="btn btn-danger" type="button">Cancelar</button>
-        </div>
+	        </div>
+	        
+	        <div class="card-footer bg-white">
+	            <button class="btn btn-primary" type="submit">Salvar</button>
+	            <button class="btn btn-danger" type="button">Cancelar</button>
+	        </div>
+        </form>
     </div>
 	
 </div>
