--- a/src/main/resources/templates/layout/layout-default.html
+++ b/src/main/resources/templates/layout/layout-default.html
@@ -7,9 +7,9 @@
     <meta name="description" content="">
     <meta name="author" content="Joel Amálio">
 
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{/css/fontawesome-all.min.css}">
-    <link rel="stylesheet" th:href="@{/css/bootadmin.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/fontawesome-all.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootadmin.min.css}">
 
     <title>JA Calendar</title>
 </head>
