--- a/src/main/resources/templates/layout/fragment/menu-lateral.html
+++ b/src/main/resources/templates/layout/fragment/menu-lateral.html
@@ -7,6 +7,7 @@
     <ul class="list-unstyled">
         <li><a href="#"><i class="fas fa-home fa-fw"></i> Dashboard</a></li>
         <li><a th:href="@{/datas/nova}"><i class="fas fa-book fa-fw"></i> Datas</a></li>
+        <li><a th:href="@{/datas}"><i class="fas fa-book fa-fw"></i> Datas :: Pesquisar</a></li>
         <li>
             <a href="#sm_expand_config" data-toggle="collapse">
                 <i class="fas fa-cog fa-fw"></i> Configurações
