--- a/src/main/resources/templates/layout/fragment/menu-lateral.html
+++ b/src/main/resources/templates/layout/fragment/menu-lateral.html
@@ -6,8 +6,8 @@
 <div class="sidebar sidebar-dark bg-dark" th:fragment="sidebar">
     <ul class="list-unstyled">
         <li><a href="#"><i class="fas fa-home fa-fw"></i> Dashboard</a></li>
-        <li><a th:href="@{/datas/nova}"><i class="fas fa-book fa-fw"></i> Datas</a></li>
-        <li><a th:href="@{/datas}"><i class="fas fa-book fa-fw"></i> Datas :: Pesquisar</a></li>
+        <li><a th:href="@{/periodo/novo}"><i class="fas fa-book fa-fw"></i> Período</a></li>
+        <li><a th:href="@{/periodo}"><i class="fas fa-book fa-fw"></i> Período :: Pesquisar</a></li>
         <li>
             <a href="#sm_expand_config" data-toggle="collapse">
                 <i class="fas fa-cog fa-fw"></i> Configurações
