Ajuste do tamanho do componente 'panel_toolbox' do css.

--- a/src/main/resources/templates/layout/layout-default.html
+++ b/src/main/resources/templates/layout/layout-default.html
@@ -19,6 +19,7 @@
 	<link th:href="@{/vendors/nprogress/nprogress.css}" rel="stylesheet" type="text/css">
 	<!-- Custom Theme Style -->
   	<link th:href="@{/gentelella/css/custom.min.css}" rel="stylesheet" type="text/css">
+  	<link th:href="@{/project/css/japroject.css}" rel="stylesheet" type="text/css">
 </head>
 
 <body class="nav-md">
