--- a/src/main/resources/templates/periodo/listar-periodo.html
+++ b/src/main/resources/templates/periodo/listar-periodo.html
@@ -52,7 +52,7 @@
 		</div>
 	</div>
 
-	<div class="col-sm-12">
+	<div class="col-xs-12">
 		<div class="x_panel">
 			<div class="x_title">
 				<h2></h2>
