--- a/src/main/resources/templates/periodo/manter-periodo.html
+++ b/src/main/resources/templates/periodo/manter-periodo.html
@@ -47,8 +47,9 @@
 					 <div class="col-md-3 col-sm-3 col-xs-6 form-group">
 	                    <label for="status">Status</label>
 	                    <div>
-							<input id="status" type="checkbox" class="ja-status" data-size="small" data-off-color="danger" 
-								data-on-text="Ativo" data-off-text="Inativo" th:field="*{status}" checked />
+							<input id="status" type="checkbox" class="ja-status" data-size="small" 
+								data-on-color="success" data-off-color="danger" 
+								data-on-text="Ativo" data-off-text="Inativo" th:field="*{status}" />
 	                    </div>
 	                </div>
 					
