--- a/src/main/resources/templates/periodo/manter-periodo.html
+++ b/src/main/resources/templates/periodo/manter-periodo.html
@@ -34,6 +34,11 @@
 			
 					<input type="hidden" th:field="*{id}" />
 					
+					<div class="col-xs-12 form-group">
+			      		<label for="usuario">Usuário</label>
+			      		<input class="form-control disabled" id="usuario" th:value="Teste" disabled>
+					</div>
+					
 					<div class="col-md-3 col-sm-3 col-xs-6 form-group">
 			      		<label for="dataInicial">Data Inicial</label>
 			      		<input type="text" class="form-control ja-date" id="dataInicial" th:field="*{dataInicial}" autocomplete="off">
@@ -63,7 +68,7 @@
 			  		<div class="form-group">
 						<div class="col-xs-12">
 							<button class="btn btn-primary" type="submit">Salvar</button>
-							<a class="btn btn-danger" th:href="@{/periodo}">Cancelar</a>
+							<a class="btn btn-default" th:href="@{/periodo}">Cancelar</a>
 						</div>
 					</div>
 			  		
