--- a/src/main/resources/templates/layout/fragment/menu-lateral.html
+++ b/src/main/resources/templates/layout/fragment/menu-lateral.html
@@ -8,7 +8,7 @@
 		<h3>Menu</h3>
 		<ul class="nav side-menu">
 			<li>
-				<a href="#"><i class="fa fa-home"></i> Dashboard </span></a>
+				<a th:href="@{/}"><i class="fa fa-home"></i> Dashboard </span></a>
 			</li>
 			<li>
 				<a><i class="fa fa-edit"></i> Cadastros <span class="fa fa-chevron-down"></span></a>
