Configuração para exibir o nome do usuário logado.

--- a/src/main/resources/templates/layout/fragment/barra-navegacao.html
+++ b/src/main/resources/templates/layout/fragment/barra-navegacao.html
@@ -14,7 +14,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li class="">
 					<a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-						<img th:src="@{/images/user.png}" alt="">Administrador
+						<img th:src="@{/images/user.png}" alt="">[[${#authentication.principal.usuario.nome}]]
 						<span class=" fa fa-angle-down"></span>
 					</a>
 					<ul class="dropdown-menu dropdown-usermenu pull-right">
