Implementaçã inicial da tela de filtro de usuário

--- a/src/main/resources/templates/layout/fragment/menu-lateral.html
+++ b/src/main/resources/templates/layout/fragment/menu-lateral.html
@@ -19,6 +19,14 @@
 				</ul>
 			</li>
 			<li>
+				<a><i class="fa fa-cogs"></i> Configurações <span class="fa fa-chevron-down"></span></a>
+				<ul class="nav child_menu">
+					<li>
+						<a th:href="@{/usuario}">Usuário</a>
+					</li>
+				</ul>
+			</li>
+			<li>
 				<a><i class="fa fa-clone"></i>Template <span class="fa fa-chevron-down"></span></a>
 				<ul class="nav child_menu">
 					<li><a href="https://colorlib.com/polygon/gentelella/index.html">Gentelella Alella</a></li>
