--- a/src/main/resources/templates/usuario/listar-usuario.html
+++ b/src/main/resources/templates/usuario/listar-usuario.html
@@ -84,7 +84,7 @@
 								</th:block>
 							</td>
 							<td>
-								<a href="@{/usuario/{id}(id=${item.id})}"
+								<a th:href="@{/usuario/{id}(id=${item.id})}"
 									class="btn btn-icon btn-pill btn-primary" data-toggle="tooltip" 
 									title="Editar" data-original-title="Edit">
 									<i class="fa fa-fw fa-edit"></i>
